spacing fix

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -63,7 +63,7 @@ body {
     height: 100%;
     opacity: 0.05;
     z-index: -1;
-}
+} 
 
 .hero-content {
     display: flex;
@@ -697,7 +697,7 @@ img {
     background-color: #f9f9f9;
     padding: 6px 12px;
     border-radius: 8px;
-    margin-bottom: 10px;
+    margin-bottom: -10px;
     margin-top: 0; /* Removed margin-top to position at top edge */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
